Vehicle loading is seperate from VehicleMission
Changes:
- Add a new LOADING StatusType
- Vehicle has a new method setLoading that triggers the creation of a LoadingController and LOADING status
- LoadingController clears the LOADING status when loading is completed
- LoadVehicle task are seperated from VehicleMission and take Vehicle as the Task focus
- Update the Mission classes that instigate loading a Vehicle; use the new setLoading method
- LoadVehicleMeta no longer searches Mission; it search for parked Vehicle with a LOADING StatusType
- Settlement defintion of parked vehcildes chnaged to take the vehicle vicinity list
- Remove getLoadingController of the VehicleMission and implementing classes
- LoadVehicleEVATest & LoadVehicleGarageTest have a new MetaTask test added
- LoadControllerTest checks the Status of the Vehicle as loading starts and completes

Part #1324